# polygonical

./: Cargo.toml  LICENSE  README.md
src/: boundingbox.rs  geom.rs  lib.rs  line.rs  maths.rs  point.rs  polygon.rs
