[package]
name = "polygonical"
description = "2d polygon geometry and operations"
keywords = ["2d", "geometry", "polygon"]
license = "MIT"
version = "0.5.0"
edition = "2021"
authors = [
    "Emily Selwood",
]
readme = "README.md"
repository = "https://github.com/emilyselwood/polygonical"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.9.0"